🎨 fix nav owl alignment

--- a/_src/static/css/organisms/_nav.pcss
+++ b/_src/static/css/organisms/_nav.pcss
@@ -12,8 +12,10 @@
 }
 
 .site-nav__item {
+  align-items: center;
   /* needed for the transform to work */
-  display: inline-block;
+  display: inline-flex;
+  height: var(--layout-header-height);
   position: relative;
   text-decoration: none;
   transition: transform 0.2s ease-out;
@@ -31,15 +33,20 @@
     padding: 0.25rem;
     position: absolute;
     top: 100%;
-    transform: translateY(100%);
+    /* transform: translateY(100%); */
     transition: inherit;
     width: 100%;
+    z-index: -1;
   }
 
   &:hover,
   &:focus {
     &::after {
-      transform: translateY(25%);
+      transform: translateY(-50%);
+
+      @media (min-width: 444px) {
+        transform: translateY(-45%);
+      }
     }
   }
 
@@ -53,7 +60,11 @@
     font-weight: bold;
 
     &::after {
-      transform: translateY(0);
+      transform: translateY(-100%) skewY(7deg);
+
+      @media (min-width: 444px) {
+        transform: translateY(-66%) skewY(7deg);
+      }
     }
   }
 }
