--- a/_src/static/css/organisms/_site-header.pcss
+++ b/_src/static/css/organisms/_site-header.pcss
@@ -4,6 +4,7 @@
   display: flex;
   flex-flow: row wrap;
   height: var(--layout-header-height);
+  overflow: hidden;
   padding: 0 4vmin;
   position: sticky;
   top: 0;
